Toggling Interface, HP bar, damage info

--- a/LowRezPlatformer/LowRezPlatformer.csproj
+++ b/LowRezPlatformer/LowRezPlatformer.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Interface\InterfaceManager.cs" />
     <Compile Include="Map Generation\MapGeneration.cs" />
     <Compile Include="Map Generation\PerlinNoise.cs" />
     <Compile Include="Program.cs" />
@@ -68,9 +69,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interface\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
