--- a/LowRezPlatformer/LowRezPlatformer.csproj
+++ b/LowRezPlatformer/LowRezPlatformer.csproj
@@ -45,8 +45,10 @@
     <Compile Include="Map Generation\PerlinNoise.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenes\DeathScene.cs" />
     <Compile Include="Scenes\FadeScreen.cs" />
     <Compile Include="Scenes\MainMenu.cs" />
+    <Compile Include="Scenes\PauseMenu.cs" />
     <Compile Include="SpriteBatchEx.cs" />
   </ItemGroup>
   <ItemGroup>
