--- a/LowRezPlatformer/LowRezPlatformer.csproj
+++ b/LowRezPlatformer/LowRezPlatformer.csproj
@@ -10,7 +10,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LowRezRogue</RootNamespace>
-    <AssemblyName>LowRezRogue</AssemblyName>
+    <AssemblyName>Head Spin Rogue</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
